<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dips"
        tools:context=".ui.auth.fragment.LoginFragment">

        <TextView
            android:id="@+id/title_sign_in"
            style="@style/AppTheme.Title.Large"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ninety_six_dips"
            android:text="@string/sign_in_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle_sign_in"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dips"
            android:text="@string/sign_in_subtitle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_sign_in" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_with_google_button"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eighty_four_dips"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_google"
            android:text="@string/label_google"
            app:layout_constraintEnd_toStartOf="@id/sign_in_with_facebook_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_sign_in" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_with_facebook_button"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eighty_four_dips"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_facebook"
            android:text="@string/label_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_in_with_google_button"
            app:layout_constraintTop_toBottomOf="@id/subtitle_sign_in" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dips"
            android:hint="@string/label_email"
            app:endIconDrawable="@drawable/ic_check"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_with_google_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_sign_in_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dips"
            android:hint="@string/sign_in_hint_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/AppTheme.Button.Large"
            android:layout_marginTop="@dimen/sixteen_dips"
            android:text="@string/label_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_sign_in_input_layout" />

        <ImageView
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_forgot_password"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/dont_have_an_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dont_have_an_account_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_button" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
