<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_botton_dialog"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dips"
    tools:context=".ui.auth.fragment.dialog.AuthDialogForgotPasswordFragment">

    <View
        android:layout_width="@dimen/ninety_six_dips"
        android:layout_height="@dimen/four_dips"
        android:layout_gravity="center"
        android:background="@drawable/bg_botton_dialog_top_bar" />

    <TextView
        style="@style/AppTheme.Title.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forty_eight_dips"
        android:text="@string/forgot_password_title"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dips"
        android:text="@string/forgot_password_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_two_dips"
        android:hint="@string/label_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="@style/AppTheme.Button.Large.Green"
        android:layout_marginTop="@dimen/thirty_two_dips"
        android:text="@string/forgot_password_continue" />

</LinearLayout>