<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".feature.profile.view.SetupProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_application">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="@dimen/zero_dips"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/sixteen_dips" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="@dimen/zero_dips"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/sixteen_dips" />

        <View
            android:id="@+id/bg_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_profile_top"
            app:layout_constraintBottom_toBottomOf="@id/spacer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setup_profile_title"
            style="@style/AppTheme.Title.Medium"
            android:layout_marginTop="@dimen/seventy_two_dips"
            android:text="@string/setup_profile_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setup_profile_description"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sixteen_dips"
            android:layout_marginTop="@dimen/eight_dips"
            android:text="@string/setup_profile_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_title" />

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/forty_dips"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_description" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/thirty_two_dips"
            app:cardBackgroundColor="@color/background_card_button_camera"
            app:layout_constraintBottom_toBottomOf="@id/profile_photo"
            app:layout_constraintEnd_toEndOf="@id/profile_photo">

            <ImageView
                android:id="@+id/change_photo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/ic_camera" />

        </androidx.cardview.widget.CardView>

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_dips"
            app:layout_constraintTop_toBottomOf="@id/profile_photo" />

        <TextView
            android:id="@+id/setup_profile_form_title"
            style="@style/AppTheme.Title.Medium"
            android:layout_marginTop="@dimen/sixteen_dips"
            android:text="@string/setup_profile_form_title"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/bg_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setup_profile_form_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dips"
            android:hint="@string/setup_profile_form_name_hint"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_form_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_profile_form_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setup_profile_form_phone_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dips"
            android:hint="@string/setup_profile_form_phone_hint"
            app:endIconDrawable="@drawable/ic_edit"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_form_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_profile_form_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setup_profile_form_date_of_birth_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dips"
            android:hint="@string/setup_profile_form_date_of_birth_hint"
            app:endIconDrawable="@drawable/ic_edit"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_form_phone_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_profile_form_date_of_birth_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setup_profile_form_location_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/zero_dips"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dips"
            android:hint="@string/setup_profile_form_location_hint"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_form_date_of_birth_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_profile_form_location_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_profile_continue_button"
            style="@style/AppTheme.Button.Large.Green"
            android:layout_width="@dimen/zero_dips"
            android:layout_marginVertical="@dimen/sixteen_dips"
            android:text="@string/button_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_form_location_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>